--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Hello world, I'm Satachhi </h1>
-<p>My teacher is awsome</p>
+<p>My teacher is awesome! </p>
+
+
 </body>
 </html>
