--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello world, I'm Satachhi </h1>
-<p>My teacher is awesome! </p>
+<p>My teacher is awesome! indeed </p>
 
 
 </body>
