--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello world, I'm Satachhi </h1>
 <p> My teacher is awesome! indeed </p>
-
-
+<a href="https://www.facebook.com/">go to facebook</a>
+<img src="pic.jpeg">
 </body>
 </html>
